--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "node-sass": "^4.13.1",
     "react": "16.13.0",
     "react-dom": "16.13.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "sass": "^1.26.3"
   }
 }
