--- a/package.json
+++ b/package.json
@@ -3,18 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "node ./server.js",
+      "build": "next build ./",
+      "start": "NODE_ENV=production node ./server.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "bulma": "^0.8.0",
-    "next": "9.3.1",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
+    "express": "^4.17.1",
+    "isomorphic-fetch": "^2.2.1",
+    "next": "^9.3.1",
     "node-sass": "^4.13.1",
-    "react": "16.13.0",
-    "react-dom": "16.13.0",
+    "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "sass": "^1.26.3"
+    "sass": "^1.26.3",
+    "styled-components": "^5.0.1"
   }
 }
