--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "node ./server.js",
-      "build": "next build ./",
-      "start": "NODE_ENV=production node ./server.js"
+    "build": "next build ./",
+    "start": "NODE_ENV=production node ./server.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -14,15 +14,19 @@
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "isomorphic-fetch": "^2.2.1",
     "next": "^9.3.1",
     "node-sass": "^4.13.1",
+    "passport": "^0.4.1",
+    "passport-auth0": "^1.3.2",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "sass": "^1.26.3",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "uid-safe": "^2.1.5"
   }
 }
